--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-responsive-screen": "^1.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
