--- a/Mobile/android/app/src/main/AndroidManifest.xml
+++ b/Mobile/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
   package="com.mobile">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
