--- a/Mobile/ios/Podfile
+++ b/Mobile/ios/Podfile
@@ -79,6 +79,10 @@ target 'Mobile' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
+  pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
+
   target 'MobileTests' do
     inherit! :complete
     # Pods for testing
