--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cli-platform-android": "^4.10.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.3.3",
     "@react-navigation/material-top-tabs": "^5.1.14",
