--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cli-platform-android": "^4.10.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.3.3",
     "@react-navigation/material-top-tabs": "^5.1.14",
     "@react-navigation/native": "^5.2.3",
     "@react-navigation/stack": "^5.2.18",
+    "i": "^0.3.6",
+    "npm": "^6.14.7",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-camera": "^3.23.1",
